Fixed word wrap in the game

--- a/public/style.css
+++ b/public/style.css
@@ -3,6 +3,11 @@ html, body {
     margin: 0;
 }
 
+pre {
+    white-space: pre-line;
+    margin: 0px;
+}
+
 #blocklyDiv {
     width: 100%;
     height: 100%;
